[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/fonts/DirtyWar.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/LobbyPlayerList.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 122.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 984.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 326.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Entrer votre pseudo"

[node name="NameEdit" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 330.0
margin_right = 984.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Charly"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 28.0
margin_right = 984.0
margin_bottom = 52.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_right = 326.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Host" type="Button" parent="Panel/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_right = 140.0
margin_bottom = 24.0
text = "Héberger une partie"

[node name="Control" type="Control" parent="Panel/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 144.0
margin_right = 249.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Connect" type="Button" parent="Panel/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 253.0
margin_right = 326.0
margin_bottom = 24.0
text = "Rejoindre"

[node name="Disconnect" type="Button" parent="Panel/VBoxContainer/HBoxContainer2/HBoxContainer"]
visible = false
margin_left = 68.0
margin_right = 152.0
margin_bottom = 24.0
text = "Se déconnecter"

[node name="Hostname" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 330.0
margin_right = 984.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "localhost"
placeholder_text = "localhost"

[node name="Control" type="Control" parent="Panel/VBoxContainer"]
margin_top = 56.0
margin_right = 984.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 20 )

[node name="Game" parent="Panel/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 984.0
margin_bottom = 458.0

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 0.173
margin_top = 32.0
margin_bottom = -9.8
custom_fonts/font = ExtResource( 1 )
text = "Tank Challenge"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
window_title = "Alerte !"
dialog_text = "Connection fermée"
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer2/HBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer2/HBoxContainer/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer2/HBoxContainer/Disconnect" to="." method="_on_Disconnect_pressed"]
